
// usage:
// protoc  --java_out=./storage/src/main/java  ./storage/src/main/java/com/kylinolap/storage/hbase/coprocessor/endpoint/protobuf/II.proto

option java_package = "com.kylinolap.storage.hbase.endpoint.generated";
option java_outer_classname = "IIProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message IIRequest {
    required bytes tableInfo = 1;
    required bytes sRowType = 2;
    optional bytes sRowFilter = 3;
    optional bytes sRowProjector = 4;
    optional bytes sRowAggregator = 5;
}

message IIResponse {
    repeated bytes rows = 1;
}

service RowsService {
  rpc getRows(IIRequest)
    returns (IIResponse);
}
